--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>y</title>
+    <title>基于vueJs的中后台管理系统</title>
   </head>
   <body>
     <div id="app"></div>
