--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">  -->
     <title>基于vueJs的中后台管理系统</title>
   </head>
   <body>
