--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <!--<link rel="" type="shee" href="http://ocif3scej.bkt.clouddn.com/atm.ico">-->
-    <link rel="icon" href="http://ocif3scej.bkt.clouddn.com/atm.ico" type="image/x-icon">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">  -->
-    <title>基于vueJs的中后台管理系统</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="icon" href="http://ocif3scej.bkt.clouddn.com/atm.ico" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>基于vueJs的中后台管理系统</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
